fix: change aside width (height) on mobile

--- a/src/styles/mobile.scss
+++ b/src/styles/mobile.scss
@@ -1,7 +1,7 @@
 @media screen and (max-width: 1000px) {
     :root {
         --main-padding: 20px;
-        --aside-width: 64px;
+        --aside-width: 72px;
     }
     .wrapper {
         margin: 0 0 var(--aside-width) 0;
